lib/than_pdf_engine_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// FPDF_DestroyLibrary()
@ffi.Native<ffi.Void Function()>()
external void pdfium_destroy();

/// pdfium
@ffi.Native<ffi.Void Function()>()
external void pdfium_init();

/// PdfCore();
@ffi.Native<ffi.Pointer<ffi.Void> Function()>()
external ffi.Pointer<ffi.Void> pdf_core_create();

/// ~PdfCore();
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void pdf_core_destroy(ffi.Pointer<ffi.Void> pdf_core_ptr);

/// bool openFile(const std::string& path, const std::string& password = "");
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external bool pdf_core_openFile(
  ffi.Pointer<ffi.Void> pdf_core_ptr,
  ffi.Pointer<ffi.Char> path,
  ffi.Pointer<ffi.Char> password,
);

/// bool openMemoryRaw(const unsigned char* dataBuffer, int dataSize,
/// const std::string& password = "");
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external bool openMemoryRaw(
  ffi.Pointer<ffi.Void> pdf_core_ptr,
  ffi.Pointer<ffi.UnsignedChar> dataBuffer,
  int dataSize,
  ffi.Pointer<ffi.Char> password,
);

/// bool openMemory64Raw(const unsigned char* dataBuffer, int dataSize,
/// const std::string& password = "");
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external bool openMemory64Raw(
  ffi.Pointer<ffi.Void> pdf_core_ptr,
  ffi.Pointer<ffi.UnsignedChar> dataBuffer,
  int dataSize,
  ffi.Pointer<ffi.Char> password,
);

/// int getPageCount();
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int pdf_core_getPageCount(ffi.Pointer<ffi.Void> pdf_core_ptr);

/// std::vector<PageSizeData> getAllPageSizes();
@ffi.Native<ffi.Pointer<Page_Size_Data> Function(ffi.Pointer<ffi.Void>)>()
external ffi.Pointer<Page_Size_Data> pdf_core_getAllPageSizes(
  ffi.Pointer<ffi.Void> pdf_core_ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void pdf_core_free_pageSizes(ffi.Pointer<ffi.Void> page_size_data_ptr);

/// PdfPage getPage(int pageIndex);
///
/// return `pdf_page_ptr`
@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, ffi.Int)>()
external ffi.Pointer<ffi.Void> pdf_core_getPage(
  ffi.Pointer<ffi.Void> pdf_core_ptr,
  int pageIndex,
);

/// ~PdfPage();
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void pdf_page_destroy(ffi.Pointer<ffi.Void> pdf_page_ptr);

/// std::uint8_t* getBitmapSourcePtr(float zoomFactor);
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int)
>()
external ffi.Pointer<ffi.Uint8> pdf_page_getBitmapSourcePtr(
  ffi.Pointer<ffi.Void> pdf_page_ptr,
  int targetWidth,
  int targetHeight,
);

/// free render data
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>()
external void pdf_page_free_render_data(ffi.Pointer<ffi.Uint8> render_data_ptr);

/// std::vector<uint8_t> renderToRGBAWithDeviceWidth(int deviceWidth,float
/// zoomFactor);
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Float,
  )
>()
external ffi.Pointer<ffi.Uint8> pdf_page_renderToRGBAWithDeviceWidth(
  ffi.Pointer<ffi.Void> pdf_page_ptr,
  ffi.Pointer<ffi.Int> bufferSize,
  int deviceWidth,
  double targetHeight,
);

/// double getOriginalWidth();
@ffi.Native<ffi.Float Function(ffi.Pointer<ffi.Void>)>()
external double pdf_page_getOriginalWidth(ffi.Pointer<ffi.Void> pdf_page_ptr);

/// double getOriginalHeight();
@ffi.Native<ffi.Float Function(ffi.Pointer<ffi.Void>)>()
external double pdf_page_getOriginalHeight(ffi.Pointer<ffi.Void> pdf_page_ptr);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
  )
>()
external ffi.Pointer<ffi.Uint8> pdf_page_renderToJpegWH(
  ffi.Pointer<ffi.Void> pdf_page_ptr,
  ffi.Pointer<ffi.Int> bufferSize,
  int width,
  int height,
  int quality,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
  )
>()
external bool pdf_page_saveAsPngWH(
  ffi.Pointer<ffi.Void> pdf_page_ptr,
  ffi.Pointer<ffi.Char> outPath,
  int width,
  int height,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
  )
>()
external bool pdf_page_saveAsJpgWH(
  ffi.Pointer<ffi.Void> pdf_page_ptr,
  ffi.Pointer<ffi.Char> outPath,
  int width,
  int height,
  int quality,
);

/// ********************PDF Util *********************** */
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Int,
  )
>()
external bool pdf_util_saveJpgWithIndex(
  ffi.Pointer<ffi.Char> pdf_path,
  ffi.Pointer<ffi.Char> password,
  ffi.Pointer<ffi.Char> out_path,
  int page_index,
  int width,
  int height,
  int quality,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
  )
>()
external bool pdf_util_savePngWithIndex(
  ffi.Pointer<ffi.Char> pdf_path,
  ffi.Pointer<ffi.Char> password,
  ffi.Pointer<ffi.Char> out_path,
  int page_index,
  int width,
  int height,
);

/// *******************PDF Core && PDF Page************************ */
final class Page_Cache_Data extends ffi.Struct {
  @ffi.Int()
  external int pageIndex;

  @ffi.Int()
  external int width;

  @ffi.Int()
  external int height;

  @ffi.Int()
  external int dataLength;

  external ffi.Pointer<ffi.Uint8> rgbaData;
}

final class Page_Size_Data extends ffi.Struct {
  @ffi.Float()
  external double width;

  @ffi.Float()
  external double height;
}
